--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@types/socket.io-client": "^1.4.32",
     "core-js": "^2.5.4",
     "lodash": "^4.17.11",
     "ng-zorro-antd": "^1.8.0",
     "rxjs": "~6.3.3",
+    "socket.io-client": "^2.1.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
