--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@types/socket.io-client": "^1.4.32",
+    "angular-2-local-storage": "^2.0.0",
     "core-js": "^2.5.4",
     "lodash": "^4.17.11",
     "ng-zorro-antd": "^1.8.0",
