--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
-    "@angular/platform-browser": "~7.0.0",
+    "@angular/platform-browser": "^7.0.3",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@types/socket.io-client": "^1.4.32",
     "core-js": "^2.5.4",
+    "hammer-timejs": "^1.1.0",
+    "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
     "ng-zorro-antd": "^1.8.0",
     "rxjs": "~6.3.3",
